tests/errors/optional_02.joyeer

class A {
    var i: Int ? = 10
}

var a: A? = A()
a.i = 12
